added js but only 1 image displaying need to fix that

--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
         />GIPHY API</a
       >
       <form>
-        <input type="text" placeholder="Search" name="search" />
+        <input
+          type="text"
+          placeholder="Search"
+          name="search"
+          id="search__input"
+        />
         <button type="submit" class="submit__btn">
           <img
             src="./assets/images/search.svg"
             class="search__btn_img"
             alt="search image"
+            id="search__btn"
           />
         </button>
       </form>
     </header>
-    <div class="container">
-      <div class="giphy"></div>
-    </div>
+    <div class="giphy"></div>
     <script src="./main.js"></script>
   </body>
 </html>
