changing for async await

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           placeholder="Search"
           name="search"
           id="search__input"
+          value="dog"
         />
         <button type="submit" class="submit__btn">
           <img
