added functions of searching gifs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           placeholder="Search"
           name="search"
           id="search__input"
-          value="dog"
         />
         <button type="submit" class="submit__btn">
           <img
@@ -39,7 +38,9 @@
         </button>
       </form>
     </header>
-    <div class="giphy"></div>
+    <main>
+      <div class="giphy"></div>
+    </main>
     <script src="./main.js"></script>
   </body>
 </html>
